# tq

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.claude-plugin/: plugin.json
docs/superpowers/plans/: 2026-07-15-orchestrator-triage-and-tui-simplification.md  2026-07-16-tq-rewrite.md  2026-07-17-tui-navigation-polish.md  2026-07-20-tui-task-detail-and-focus-nav.md
docs/superpowers/specs/: 2026-07-15-orchestrator-triage-and-tui-simplification-design.md  2026-07-16-tq-rewrite-design.md  2026-07-17-tui-navigation-polish-design.md  2026-07-20-tui-task-detail-and-focus-nav-design.md
expqueue/: cli.py  config.py  orchestrator.py  panes.py  projects.py  store.py  tui.py
skills/orchestrator-loop/: SKILL.md
skills/tq-orchestrator/: SKILL.md
skills/tqctl/: SKILL.md
skills/tqctl-restricted/: SKILL.md
tests/: test_config.py  test_orchestrator.py  test_panes.py  test_projects.py  test_store.py
tq/: cli.py  config.py  orchestrator.py  panes.py  projects.py  store.py  tui.py
tq-cli/: Cargo.toml
tq-cli/src/: main.rs
tq-cli/tests/: restricted_mode.rs
tq-core/: Cargo.toml
tq-core/src/: error.rs  lib.rs  lock.rs  paths.rs  project.rs  store.rs  task.rs
tq-core/tests/: lifecycle.rs
tq-tui/: Cargo.toml
tq-tui/src/: app.rs  main.rs  ui.rs
