[project]
name = "expqueue"
version = "0.1.0"
description = "File-backed experiment task queue with a Textual TUI and a CLI for agents"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
expqueue = "expqueue.cli:main"
expqueue-tui = "expqueue.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expqueue"]
