[project]
name = "tq"
version = "0.1.0"
description = "File-backed task queue tightly coupled to a persistent c11 orchestrator"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
tq = "tq.cli:main"
tq-tui = "tq.tui:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tq"]
